axelor-web/src/main/webapp/css/view.form.panels.css
/**
 * Axelor Business Solutions
 *
 * Copyright (C) 2012-2014 Axelor (<http://axelor.com>).
 *
 * This program is free software: you can redistribute it and/or  modify
 * it under the terms of the GNU Affero General Public License, version 3,
 * as published by the Free Software Foundation.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
.bar-layout {
	max-width: 1200px;
	margin: auto;
	padding: 14px;
}

.bar-layout.mid-form {
	max-width: 768px;
}

.bar-layout.mini-form {
	max-width: 480px;
}

.panel-layout * {
	box-sizing: border-box;
}

.panel {
	border: 1px solid #d4d4d4;
	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
}

.panel .panel-header {

	background-color: #f5f5f5;
	border-bottom: 1px solid #d4d4d4;

	padding: 6px 10px;
}

.panel-nested .panel-header {
	background-color: #fff;
	padding: 6px 0;
	margin-bottom: 4px;
}

.panel .panel-title {
	font-size: 16px;
}

.panel .panel-header .menu-bar {
	position: relative;
	top: -6px;
	right: -10px;
	margin: 0;
}

.panel .panel-header .menu-bar > .menu > a {
	padding: 6px 10px;
}

.panel .panel-header .menu-bar .caret {
	border-top-color: #333333 !important;
	border-bottom-color: #333333 !important;
	margin-top: 7px;
}

.panel .panel-header .dropdown-menu {
	left: inherit;
	right: 0;
	border-radius: 0;
}

.panel .panel-body {
	padding: 14px;	
}

.panel {
	margin-bottom: 18px;
	margin-top: -19px;
}

.panel:first-child,
.panel.panel-related,
.panel.panel-side {
	margin-top: 0;
}

.panel.noframe {
	border: none;
	box-shadow: none;
}
.panel.noframe .panel-body {
	padding: 0;
}

.panel .row-fluid > .form-item {
	margin-bottom: 12px;
}

.panel .row-fluid:last-child > .form-item {
	margin-bottom: 0;
}

@media (max-width: 767px) {
	.panel .row-fluid:last-child > .form-item {
		margin-bottom: 12px;
	}
	.panel .row-fluid:last-child > .form-item:last-child {
		margin-bottom: 0;
	}
}

.panel-layout .panel {
	border: none;
	box-shadow: none;
	margin-bottom: 0;
}

.panel-layout .bar-layout,
.panel-layout .panel .panel-body {
	padding: 0;
}

.panel-layout .o2m-list .panel .row-fluid > .form-item {
	margin-bottom: 4px;
}

.panel-layout .form-item-container.readonly > a,
.panel-layout .form-item-container.readonly > input,
.panel-layout .form-item-container.readonly > span.display-text {
	padding-left: 0;	
}

.panel-layout .form-item-container input {
	min-width: inherit;
}
.panel-layout .form-item-container.time-item input,
.panel-layout .form-item-container.datetime-item .picker-input {
	width: 100%;
}

.panel-layout .tag-select {
	min-height: 28px;
}
.panel-layout .tag-select .tag-text,
.panel-layout .tag-select .tag-link,
.panel-layout .tag-select-single .tag-link {
	height: 18px;
	line-height: 18px;
}

.panel-layout .label-item {
	color: #999;
	font-weight: 400;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

.panel-layout .boolean-item label,
.panel-layout .boolean-item input {
	float: left;
}

.panel-layout .boolean-item input {
	margin-top: 3px !important;
}

.panel-related .panel-header {
	border-bottom: none;
}
.panel-related .panel-header .icons-bar {
	padding-top: 0;
}
.panel-related .panel-header .icons-bar i {
	margin: 0 4px;
	padding: inherit;
}

.panel-related .panel-body {
	padding: 0;
	position: relative;
	min-height: 200px;
}

.panel-related .panel-body .slickgrid {
	position: absolute;
	left: 0px;
	right: 0px;
	top: 0px;
	bottom: 0px;
	border: none;
}
.panel-tabs,
.panel-stack {
	margin-bottom: 18px;
}
.panel-tabs .tab-content {
	padding-top: 6px;
}

.panel-tabs .tab-content > .panel {
	margin-top: 0;
}

.panel-stack > .panel {
	margin: 0;
}

.bar-layout .portlet {
	margin-bottom: 18px;
}

.bar-layout .portlet,
.bar-layout .portlet-header .navbar-inner,
.bar-layout .portlet-body,
.bar-layout .portlet-content {
	border-radius: 0 !important;
}
.bar-layout .portlet-header .navbar-inner {
	background-image: none;
	background-color: #f5f5f5;
	border-bottom: 1px solid #d4d4d4;
}
.bar-layout .portlet-header .divider-vertical {
	border-left: 1px solid #D3D3D3;
}

.bar-layout .form-item .form-item-portlet,
.bar-layout .form-item .form-item-portlet .portlet {
	height: auto;
	min-height: inherit !important;
}

.panel-layout .o2m-list .form-item {
	padding: 0;
}

.panel-layout .o2m-list input,
.panel-layout .o2m-list button {
	border-radius: 0;
}

.panel-layout .o2m-list .panel {
	margin-bottom: 0;
}

.panel-layout .editable > .o2m-list {
	display: table;
	width: 100%;
}

.panel-layout .editable > .o2m-list .o2m-list-row {
	display: table-row;
}

.panel-layout .editable > .o2m-list .o2m-list-row > div,
.panel-layout .editable > .o2m-list .o2m-list-row > span {
	display: table-cell;
	padding: 2px 0;
}

.panel-layout .editable > .o2m-list .o2m-list-row > span.o2m-list-remove {
	vertical-align: middle;
	width: 24px;
}

.panel-layout .editable > .o2m-list .o2m-list-row > a,
.panel-layout .editable > .o2m-list .o2m-list-row > span.o2m-list-remove a {
	color: #333333;
	outline: none;
}
.panel-layout .editable > .o2m-list .o2m-list-row > span.o2m-list-remove a {
	padding: 0 6px;
}

.panel-layout .editable > .o2m-list .o2m-list-row .toggle-item button {
	border-left: 0;
	outline: none;
}

.panel-layout .row-fluid [class*="span"] {
	min-height: inherit !important;
}

/** remove rounded corners */
.panel-layout input,
.panel-layout textarea,
.panel-layout button,
.panel-layout pre,
.panel-layout .btn {
	border-radius: 0;
}
.panel-layout .tag-select,
.panel-layout .tag-select .label {
	border-radius: 0;
}
.panel-layout .tag-select .picker-icons > i.fa {
	padding-top: 3px;
}
.panel-layout .btn:active,
.panel-layout .btn.active {
  background-color: #e0e0e0;
}
.panel-layout .btn:focus {
  background-position: inherit;
}

/** some special classes */
.border-left-none,
.border-left-none.form-item-container,
.border-left-none.form-item-container > input {
	border-left: none;
}
.border-right-none,
.border-left-none.form-item-container,
.border-left-none.form-item-container > input  {
	border-left: none;
}

.address-list .o2m-list-row {
	width: 48.71%;
	float: left;
	margin-left: 0;
}
.address-list .o2m-list-add {
	width: 100%;
	margin-left: 0;
}
.address-list .o2m-list-row.even {
	margin-left: 2.56%;
}

@media (max-width: 767px) {
	.address-list .o2m-list-row {
		width: 100%;
		float: none;
		margin-left: 0 !important;
	}
}
.panel-layout .order-subtotal dl {
	width: 280px;
	float: right;
}
.panel-layout .order-subtotal dt,
.panel-layout .order-subtotal dd {
	padding: 4px;
}

.panel-layout .order-subtotal dt {
	padding-right: 8px;
	font-weight: normal;
}
.panel-layout .order-subtotal dd {
	margin-left: 0;
	text-align: right;
}

.panel-layout .order-subtotal-total {
	border-top: 1px solid #ccc;
	font-size: 18px;
	font-weight: bold;
}

@media (max-width: 767px) {
	.panel-layout .order-subtotal dt {
		float: left;
		text-align: right;
		width: 48%;
	}
}

